--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     .billing {
       display: flex;
       align-items: center;
+      margin-top: 100px;
+      margin-bottom: 15px;
     }
   </style>
 
@@ -33,9 +35,6 @@
         connected apps to manage<br />
         their own workflows
       </p>
-      <br />
-      <br />
-      <br />
       <div class="billing">
         <span style="font-size: 60px"><b>$10</b></span>
         <span style="margin-left: 20px; margin-top: 15px; font-weight: 500">
@@ -43,7 +42,6 @@
           billed annually
         </span>
       </div>
-      <br />
       <div style="margin-bottom: 20px">
         <span><b>$12</b></span>
         <span style="font-weight: 500">billed monthly </span>
@@ -61,9 +59,10 @@
       >
         Try for free
       </button>
-      <br />
-      <p style="font-size: 16px"><b>Everything in Free, plus: </b></p>
-      <ul style="font-size: 16px">
+      <p style="font-size: 16px; margin-top: 30px">
+        <b>Everything in Free, plus: </b>
+      </p>
+      <ul style="font-size: 16px; margin-bottom: 70px">
         <li>
           3 <span style="border-bottom: 2px dotted black">extensions</span> per
           base
