--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       border-radius: 12px;
       width: 270px;
       padding: 12px;
+      margin: auto;
       background-color: #ffeab6;
     }
 
@@ -62,7 +63,7 @@
       <p style="font-size: 16px; margin-top: 30px">
         <b>Everything in Free, plus: </b>
       </p>
-      <ul style="font-size: 16px; margin-bottom: 70px">
+      <ul style="font-size: 16px; margin-bottom: 20px">
         <li>
           3 <span style="border-bottom: 2px dotted black">extensions</span> per
           base
